# troll_engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  exts.txt  rapport.tex  valgrind.supp
examples/: CMakeLists.txt
examples/buddha/: CMakeLists.txt
examples/buddha/include/: pov.h
examples/buddha/shaders/: per_fragment.fs
examples/buddha/src/: main.cpp  pov.cpp
examples/glfw_window/: CMakeLists.txt  main.cpp  vs.glsl
examples/mesh/: CMakeLists.txt  fs.glsl  main.cpp  vs.glsl
examples/qt5_widget/: CMakeLists.txt  fs.glsl  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/qt5_window/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/solar_system/: CMakeLists.txt  main.cpp
examples/solar_system/shaders/: texture.fs  texture.vs
examples/ui/: CMakeLists.txt  fs.glsl  main.cpp  vs.glsl
include/: attribute.h  attribute.inl  camera.h  camera.inl  debug.h  fbo.h  fbo.inl  gl_traits.h  glcontext.h  image.h  image.inl  input.h  matrixstack.h  mcgyver.h  mesh.h  mesh.inl  obj.h  obj_lexer.h  planet.h  program.h  program.inl  scenegraph.h  sceneimporter.h  sceneimporter.inl  shader.h  texture.h  texture.inl  transform.h  transform.inl  troll_engine.h  ubo.h  ubo.inl  utility.h  utility.inl  vao.h  vbo.h  vbo.inl  window.h
include/object/: component.h  meshcomponent.h  object.h
shaders/: gouraud.fs  gouraud.vs  normals.fs  normals.vs  passthrough.fs  passthrough.vs  per_fragment.fs  per_fragment.vs  perspective.fs  perspective.vs  tex_lighting.fs  tex_lighting.vs
src/: attribute.cpp  camera.cpp  debug.cpp  fbo.cpp  image.cpp  input.cpp  main.cpp  matrixstack.cpp  mcgyver.cpp  mesh.cpp  obj.cpp  planet.cpp  program.cpp  scenegraph.cpp  sceneimporter.cpp  shader.cpp  texture.cpp  transform.cpp  troll_engine.cpp  utility.cpp  vao.cpp  vbo.cpp  wavefront_obj.l  wavefront_obj.ypp  window.cpp
src/object/: component.cpp  meshcomponent.cpp  object.cpp
tests/: CMakeLists.txt  test_ubo.cpp  test_utilities.cpp
tools/text/: CMakeLists.txt  bsptree2d.cpp  bsptree2d.h  freetype.cpp  freetype.h  main.cpp
