cmake_minimum_required(VERSION 2.8)

option(BUILD_SOLAR_SYSTEM_EXAMPLE "Build solar system example" ON)
option(BUILD_MESH_EXAMPLE "Build mesh example" ON)
if(WINDOW_GLFW)
    option(BUILD_GLFW_WINDOW_EXAMPLE "Build GLFW window example" ON)
else()
    set(BUILD_GLFW_WINDOW_EXAMPLE OFF)
endif()
if(WINDOW_QT5)
    option(BUILD_QT5_WINDOW_EXAMPLE "Build Qt5 window example" ON)
    option(BUILD_QT5_WIDGET_EXAMPLE "Build Qt5 widget example" ON)
else()
    set(BUILD_QT5_WINDOW_EXAMPLE OFF)
    set(BUILD_QT5_WIDGET_EXAMPLE OFF)
endif()

if(BUILD_SOLAR_SYSTEM_EXAMPLE)
    add_subdirectory(solar_system)
endif()
if(BUILD_MESH_EXAMPLE)
    add_subdirectory(mesh)
endif()
if(BUILD_GLFW_WINDOW_EXAMPLE)
    add_subdirectory(glfw_window)
endif()
if(BUILD_QT5_WINDOW_EXAMPLE)
    add_subdirectory(qt5_window)
endif()
if(BUILD_QT5_WIDGET_EXAMPLE)
    add_subdirectory(qt5_widget)
endif()
